--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "^16.0.10",
     "pdf-lib": "^1.17.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "server-only": "^0.0.1",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
